# ------------------------------------------------------------------------------
#  Numenta Platform for Intelligent Computing (NuPIC)
#  Copyright (C) 2019, Numenta, Inc.  Unless you have an agreement
#  with Numenta, Inc., for a separate license for this software code, the
#  following terms and conditions apply:
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU Affero Public License version 3 as
#  published by the Free Software Foundation.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#  See the GNU Affero Public License for more details.
#
#  You should have received a copy of the GNU Affero Public License
#  along with this program.  If not, see http://www.gnu.org/licenses.
#
#  http://numenta.org/licenses/
#
# ------------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]
include = "\\.pyi?$"
exclude = """
/(
    \\.eggs
  | \\.git
  | build
  | dist
  | __pycache__
)/
"""

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = ["nupic.torch"]
known_third_party = ["tqdm", "librosa", "requests"]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-ra'
testpaths = [
    'tests',
]

[tool.coverage.run]
branch = true
