# ------------------------------------------------------------------------------
#  Numenta Platform for Intelligent Computing (NuPIC)
#  Copyright (C) 2019, Numenta, Inc.  Unless you have an agreement
#  with Numenta, Inc., for a separate license for this software code, the
#  following terms and conditions apply:
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU Affero Public License version 3 as
#  published by the Free Software Foundation.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#  See the GNU Affero Public License for more details.
#
#  You should have received a copy of the GNU Affero Public License
#  along with this program.  If not, see http://www.gnu.org/licenses.
#
#  http://numenta.org/licenses/
#
# ------------------------------------------------------------------------------
[metadata]
name = nupic.torch
author = Numenta
author_email = nupic.torch@numenta.com
license = AGPLv3
license_files = LICENSE
platforms = any
url = https://github.com/numenta/nupic.torch
description = Numenta Platform for Intelligent Computing PyTorch libraries
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: nupic.torch.__version__
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

project_urls =
    Documentation = https://nupictorch.readthedocs.io
    Bug Reports = https://github.com/numenta/nupic.torch/issues
    Source = https://github.com/numenta/nupic.torch

[options]
python_requires = >=3.7, <4
install_requires =
    torch>=1.6,<=1.13.1
packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    awscli
    numpy
    pytest==6.2.5
    pytest-xdist==2.4.0
    pytest-cov==3.0.0

    # Python coding style formatter
    black==21.7b0

    # Format docstrings
    docformatter==1.4

    # Format imports
    isort==4.3.21

    # Python Linting tools
    flake8==3.9.2

    # Check Python coding style
    flake8-black==0.2.3

    # Check forgotten breakpoints
    flake8-breakpoint==1.1.0

    # Find likely bugs and design problems
    flake8-bugbear==21.9.1

    # Check for python builtins being used as variables or parameters
    flake8-builtins==1.5.3

    # Help you write better list/set/dict comprehensions
    flake8-comprehensions==3.6.1

    # Checks for copyright notices in all python files
    flake8-copyright==0.2.2

    # Check docstrings using pydocstyle conforming to PEP 257
    # FIXME: See  https://gitlab.com/pycqa/flake8-docstrings/issues/36
    # flake8-docstrings

    # Check for FIXME, TODO and other temporary developer notes
    flake8-fixme==1.1.1

    # Check for sorted imports
    flake8-isort==4.0.0

    #Check for mutable default arguments
    flake8-mutable==1.2.0

    # Check for Print statements in python files
    flake8-print==4.0.0

    # Check the PEP-8 naming conventions
    pep8-naming==0.8.2

    # Check string quotes
    flake8-quotes==3.3.0
 
examples =
    librosa==0.7.1
    requests
    tqdm

docs =
    docutils>=0.17
    sphinx>=2
    sphinx-autobuild
    myst-parser

[bdist_wheel]
universal = 0

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
